ECC-353 - fix for high contrast mode (#180)

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -89,7 +89,7 @@ h1 {
 }
 
 .govuk-box-highlight {
-    background-color: #00703c;
+    outline: 5px solid;
 }
 
 .govuk-box-highlight h1 {
